@@ -252,6 +252,7 @@
 				<F N="../include/mdds/multi_type_vector.hpp"/>
 				<F N="../include/mdds/multi_type_vector_custom_func1.hpp"/>
 				<F N="../include/mdds/multi_type_vector_custom_func2.hpp"/>
+				<F N="../include/mdds/multi_type_vector_custom_func3.hpp"/>
 				<F N="../include/mdds/multi_type_vector_def.inl"/>
 				<F N="../include/mdds/multi_type_vector_itr.hpp"/>
 				<F N="../include/mdds/multi_type_vector_macro.hpp"/>
